# sitemapcrawler

./: README.md  pyproject.toml
sitemapcrawler/: __init__.py  crawler.py  requirements.txt  test.py
