[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sitemapcrawler"
version = "0.0.1"
authors = [
  { name="Barry Melton", email="barry@sureisfun.com" },
]
description = "A simple sitemap crawler that acts as the backbone for other operations"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.hatch.build.targets.wheel]
include = [
  "sitemapcrawler/*",
]

dependencies = [
  "beautifulsoup4>=4.11.1",
  "bs4>=0.0.0",
  "certifi>=2022.12.7",
  "charset-normalizer>=3.0.1",
  "idna>=3.4",
  "lxml>=4.9.2",
  "nanoid>=2.0.0",
  "requests>=2.28.2",
  "soupsieve>=2.4",
  "urllib3>=1.26.14",
]

[project.urls]
"Homepage" = "https://github.com/bmelton/sitemapcrawler"
"Bug Tracker" = "https://github.com/bmelton/sitemapcrawler/issues"

